src/player.scss
/* ... */
#controlbar {
	background: #333333;
	position: fixed;
	right: 0;
	bottom: 0;
	font-size: 14px;
	margin-top: 5px;

	text-align: center;

	color: #fff;

	width: calc($clue_width + 1px);
	padding: 5px 0;

	z-index: 10;
}

.submitholder {
	position: absolute;
	right: 0px;
	top: 8px;
	text-align: center;
	display: inline-block;
	margin-right: 20px;
}

.reader-instructions {
	position: absolute;
	margin: -1px;
	border: 0;
	padding: 0;
	width: 1px;
	height: 1px;
	overflow: hidden;
	clip: rect(0 0 0 0);
}

.invisible-until-focused {
	opacity: 0;
	position: absolute;
	right: 50%;
	top: 70px;
	text-align: center;
	pointer-events: none;
	display: block;
}
.invisible-until-focused:focus {
	opacity: 1;
}

// MOBILE SETTINGS

#hint-splitter {
	display: flex;
	flex-direction: row;

	width: 100%;
	justify-content: space-between;
}

#nav-div {
	visibility: hidden;
	width: 0px;
	height: 0px;
}

@media (width < $mobile_w_break) {
	#controlbar {
		width: 100%;	
	}

	#nav-div {
		visibility: visible;
		width: fit-content;
		height: fit-content;
	}

	.application {
		position: relative;
		
		#specialInput {
			bottom: 32px;
			
			#specialInputBody {
				max-width: calc(100vw - 20px);
			}
		}
		
		#clues {
			width: 100%;
			max-height: 200px;
			overflow-y: hidden;
			padding: 0px;
			padding-top: 7px;
			padding-bottom: 7px;
			.clue {
				transition: all 0s ease;
				-moz-transition: all 0s ease;
				-webkit-transition: all 0s ease;
			}
		}

		#board {
			height: calc(100% - 90px);
			#movable-container {
				right: 10px;
			}
		}

		#options {
			top: calc(100vh - 140px);
			.icon-tutorial, .icon-keyboard, .icon-print, .icon-zoomin, .icon-zoomout, .icon-center {
				right: 4px;
			}

			.icon-zoomin, .icon-zoomout {
				visibility: hidden;
			}
		}
	}

	#alertbox, #tutorialbox, #introbox {
		min-width: 300px;
		max-width: calc(90vw);
	}
}

